--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   </head>
   <body>
     <footer>
+      <!-- footer container contains whole body of the footer -->
       <div class="section1 padd">
+        <!-- section1 contains the upper part with follow us on and logos of social media sites -->
         <h4>Follow Us on</h4>
+        <!-- different logos -->
         <div class="logos">
           <img src="tw.svg" />
         </div>
@@ -21,8 +24,11 @@
         </div>
       </div>
       <div class="section2 padd">
+        <!-- section 2 contains 2 section upper and lower -->
         <div class="upper">
+          <!-- the upper section contains various headings and links to them -->
           <div class="corporate">
+            <!-- this section contains contact and address -->
             <h2>Corporate HQ</h2>
             <p>
               A:Lorem ipsum dolor sit amet, consectetur adipis qwe qwe elit.
@@ -31,7 +37,9 @@
             <p>E:asasddad@qswe.com</p>
           </div>
           <div class="subSection21">
+            <!-- this section takes 75% width of upper section and contains important links -->
             <div class="indiSection">
+              <!-- indisections are individual section containig specific headings and links -->
               <h2>Discover Us</h2>
               <p>Who we are</p>
               <p>The Team</p>
@@ -62,6 +70,7 @@
           </div>
         </div>
         <div class="lower">
+          <!-- lower section contains right and left section in left section there are some links and on right there is copyright details -->
           <div class="lowerLeft">
             <p>Privacy Policy</p>
             <p>Glossary</p>
