--- a/index.html
+++ b/index.html
@@ -9,78 +9,87 @@
   <body>
     <footer>
       <!-- footer container contains whole body of the footer -->
-      <div class="section1 padd">
+      <section class="section1">
         <!-- section1 contains the upper part with follow us on and logos of social media sites -->
-        <h4>Follow Us on</h4>
-        <!-- different logos -->
-        <div class="logos">
-          <img src="tw.svg" />
-        </div>
-        <div class="logos">
-          <img src="in.svg" />
-        </div>
-        <div class="logos">
-          <img src="fa.svg" />
-        </div>
-      </div>
-      <div class="section2 padd">
-        <!-- section 2 contains 2 section upper and lower -->
-        <div class="upper">
-          <!-- the upper section contains various headings and links to them -->
-          <div class="corporate">
-            <!-- this section contains contact and address -->
-            <h2>Corporate HQ</h2>
-            <p>
-              A:Lorem ipsum dolor sit amet, consectetur adipis qwe qwe elit.
-            </p>
-            <p>M:+911234567890</p>
-            <p>E:asasddad@qswe.com</p>
-          </div>
-          <div class="subSection21">
-            <!-- this section takes 75% width of upper section and contains important links -->
-            <div class="indiSection">
-              <!-- indisections are individual section containig specific headings and links -->
-              <h2>Discover Us</h2>
-              <p>Who we are</p>
-              <p>The Team</p>
+        <div class="container">
+          <div class="footerUpper">
+            <h4>Follow Us on</h4>
+            <!-- different logos -->
+            <div class="logos">
+              <img src="tw.svg" />
             </div>
-            <div class="indiSection">
-              <h2>Services</h2>
-              <p>Digital and Software Engineering</p>
-              <p>Cloud enablement</p>
-              <p>Digital Tech Services</p>
-              <p>Digital Media</p>
+            <div class="logos">
+              <img src="in.svg" />
             </div>
-            <div class="indiSection">
-              <h2>Industries</h2>
-              <p>Telecom | Media | Technology</p>
-              <p>Retail | CPG | Logistics</p>
-              <p>Banking | Financial Services | Insurance</p>
-              <p>Healthcare | Life Sciences | Manufacturing</p>
-            </div>
-            <div class="indiSection">
-              <h2>Digital Solutions</h2>
-              <p>Digit7</p>
-              <p>Invisinet</p>
-              <p>VCollab</p>
-            </div>
-            <div class="indiSection">
-              <h2>Careers</h2>
+            <div class="logos">
+              <img src="fa.svg" />
             </div>
           </div>
         </div>
-        <div class="lower">
-          <!-- lower section contains right and left section in left section there are some links and on right there is copyright details -->
-          <div class="lowerLeft">
-            <p>Privacy Policy</p>
-            <p>Glossary</p>
-            <p>Sitemap</p>
-          </div>
-          <div class="lowerRight">
-            <p>Infovision.inc © 2024. All rights reserved</p>
+      </section>
+
+      <section class="section2">
+        <div class="container">
+          <!-- section 2 contains 2 section upper and lower -->
+          <div class="footerLower">
+            <div class="upper">
+              <!-- the upper section contains various headings and links to them -->
+              <div class="corporate">
+                <!-- this section contains contact and address -->
+                <h2>Corporate HQ</h2>
+                <p>
+                  A:Lorem ipsum dolor sit amet, consectetur adipis qwe qwe elit.
+                </p>
+                <p>M:+911234567890</p>
+                <p>E:asasddad@qswe.com</p>
+              </div>
+              <div class="subSection21">
+                <!-- this section takes 75% width of upper section and contains important links -->
+                <div class="indiSection">
+                  <!-- indisections are individual section containig specific headings and links -->
+                  <h2>Discover Us</h2>
+                  <p>Who we are</p>
+                  <p>The Team</p>
+                </div>
+                <div class="indiSection">
+                  <h2>Services</h2>
+                  <p>Digital and Software Engineering</p>
+                  <p>Cloud enablement</p>
+                  <p>Digital Tech Services</p>
+                  <p>Digital Media</p>
+                </div>
+                <div class="indiSection">
+                  <h2>Industries</h2>
+                  <p>Telecom | Media | Technology</p>
+                  <p>Retail | CPG | Logistics</p>
+                  <p>Banking | Financial Services | Insurance</p>
+                  <p>Healthcare | Life Sciences | Manufacturing</p>
+                </div>
+                <div class="indiSection">
+                  <h2>Digital Solutions</h2>
+                  <p>Digit7</p>
+                  <p>Invisinet</p>
+                  <p>VCollab</p>
+                </div>
+                <div class="indiSection">
+                  <h2>Careers</h2>
+                </div>
+              </div>
+            </div>
+            <div class="lower">
+              <!-- lower section contains right and left section in left section there are some links and on right there is copyright details -->
+              <div class="lowerLeft">
+                <p>Privacy Policy</p>
+                <p>Glossary</p>
+                <p>Sitemap</p>
+              </div>
+              <div class="lowerRight">
+                <p>Infovision.inc © 2024. All rights reserved</p>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
+      </section>
     </footer>
   </body>
 </html>
