Reworked the whole code

--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
           <div class="footerUpper">
             <h4>Follow Us on</h4>
             <!-- different logos -->
-            <div class="logos">
-              <img src="tw.svg" />
-            </div>
-            <div class="logos">
-              <img src="in.svg" />
-            </div>
-            <div class="logos">
-              <img src="fa.svg" />
+            <div class="allLogos">
+              <div class="logos">
+                <img src="tw.svg" />
+              </div>
+              <div class="logos">
+                <img src="in.svg" />
+              </div>
+              <div class="logos">
+                <img src="fa.svg" />
+              </div>
             </div>
           </div>
         </div>
@@ -53,17 +55,20 @@
                 </div>
                 <div class="indiSection">
                   <h2>Services</h2>
-                  <p>Digital and Software Engineering</p>
+                  <p>
+                    Digital and Software<br />
+                    Engineering
+                  </p>
                   <p>Cloud enablement</p>
                   <p>Digital Tech Services</p>
                   <p>Digital Media</p>
                 </div>
                 <div class="indiSection">
                   <h2>Industries</h2>
-                  <p>Telecom | Media | Technology</p>
+                  <p>Telecom | Media |<br />Technology</p>
                   <p>Retail | CPG | Logistics</p>
-                  <p>Banking | Financial Services | Insurance</p>
-                  <p>Healthcare | Life Sciences | Manufacturing</p>
+                  <p>Banking | Financial Services |<br />Insurance</p>
+                  <p>Healthcare | Life Sciences |<br />Manufacturing</p>
                 </div>
                 <div class="indiSection">
                   <h2>Digital Solutions</h2>
