added new comments

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <footer>
       <!-- footer container contains whole body of the footer -->
-      <section class="section1">
+      <div class="section1">
         <!-- section1 contains the upper part with follow us on and logos of social media sites -->
         <div class="container">
           <div class="footerUpper">
@@ -28,9 +28,9 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
 
-      <section class="section2">
+      <div class="section2">
         <div class="container">
           <!-- section 2 contains 2 section upper and lower -->
           <div class="footerLower">
@@ -94,7 +94,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
     </footer>
   </body>
 </html>
